--- a/package.json
+++ b/package.json
@@ -30,12 +30,19 @@
   },
   "homepage": "https://github.com/JasonYouqw/rz-platform#readme",
   "dependencies": {
+    "@loadable/component": "^5.13.1",
     "@types/jest": "^26.0.3",
+    "@types/loadable__component": "^5.13.0",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-redux": "^5.0.18",
+    "antd-mobile": "^2.3.3",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
+    "history": "^4.10.1",
     "jest": "^26.1.0",
     "koa-ejs": "^4.3.0",
     "koa-router": "^9.1.0",
@@ -44,13 +51,20 @@
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "typescript": "^3.9.6"
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.9.6",
+    "zarm": "^2.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
@@ -63,6 +77,7 @@
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "postcss-pxtorem": "^5.1.1",
     "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
