--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "cross-env DEPLOY_ENV=development nodemon ./k-server/app.ts",
-    "build": "webpack --config ./k-webpack/build/webpack.prd.config.js",
+    "build": "webpack --mode=production --config ./k-webpack/build/webpack.prd.config.js",
+    "build1": "webpack --mode=production --config ./build/webpack.config.js",
     "dll": "webpack --config ./k-webpack/build/webpack.dll.config.js"
   },
   "repository": {
@@ -56,8 +57,7 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.9.6",
-    "zarm": "^2.5.1"
+    "typescript": "^3.9.6"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -84,7 +84,8 @@
     "ts-node": "^8.10.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
     "webpack-merge": "^5.0.8"
   }
 }
