add k-canvas、k-dispatcher、k-socket、k-webGL folder

--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "cross-env": "^7.0.2",
     "history": "^4.10.1",
     "jest": "^26.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "koa-body": "^4.2.0",
     "koa-ejs": "^4.3.0",
+    "koa-jwt": "^4.0.0",
     "koa-router": "^9.1.0",
     "koa-static": "^5.0.0",
     "koa2": "^2.0.0-alpha.7",
