--- a/koa-next-mongo-init/package.json
+++ b/koa-next-mongo-init/package.json
@@ -17,5 +17,8 @@
     "next": "^10.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@zeit/next-css": "^1.0.1"
   }
 }
