--- a/koa-next-mongo-init/package.json
+++ b/koa-next-mongo-init/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.16.0",
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "next": "^10.2.3",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@zeit/next-css": "^1.0.1"
+    "@zeit/next-css": "^1.0.1",
+    "babel-plugin-import": "^1.13.3"
   }
 }
